Fix copy link text not visible for dark and blue theme

--- a/scss/themes/_blue.scss
+++ b/scss/themes/_blue.scss
@@ -8,6 +8,9 @@
     $body-bg: #2a374c;
     $body-color: $white;
 
+    $popup-bg: #2a374c;
+    $popup-color: $white;
+
     $btn-light-bg: #5b6064;
     $btn-light-color: $white;
     $btn-secondary-bg: #1e273f;
