--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -10,6 +10,9 @@
 
     $dark-color: #2b2c39;
 
+    $popup-bg: #20212d;
+    $popup-color: $white;
+
     $btn-light-bg: #5b6064;
     $btn-light-color: $white;
 
